--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -35,8 +35,9 @@
       <div *ngIf="question.choices" class="choices-panel clearfix">
         <span *ngFor="let choice of question.choices let i=index" class="question-radio-button"
           [ngClass]="{'question-radio-button-correct': showAnswer && choiceIsCorrect(choice.text), 'question-radio-button-wrong': submissionResult && choiceIsWrongAnswer(choice.text) }">
-          <input [id]="'id'+i" name="choices" value="on" type="radio" (click)="onChoiceClicked(choice.text)"/>
-          <label [for]="'id'+i" (click)="onChoiceClicked(choice.text)">{{choice.text}}</label>
+          <input [id]="'id'+i" name="choices" value="on" type="radio" (click)="onChoiceClicked(choice.text)"
+            [disabled]="!enableChoices"/>
+          <label [for]="'id'+i">{{choice.text}}</label>
         </span>
       </div>
 
