--- a/src/app/question.component.css
+++ b/src/app/question.component.css
@@ -15,6 +15,10 @@
     animation-duration: 1s;
 }
 
+.question-label-disabled {
+  color: #888;
+}
+
 .choices-panel {
     margin-top: 1em;
     margin-bottom: 1em;
