Login/UserStatus: Add Facebook login.
Using the new endpoint just added in go-bigoquiz-server.

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -8,6 +8,7 @@
       <div *ngIf="!(loginInfo.nickname)" class="login-panel">
         <p><a href="{{googleLoginUrl}}">Sign In With Google</a></p>
         <p><a href="{{githubLoginUrl}}">Sign In With GitHub</a></p>
+        <p><a href="{{facebookLoginUrl}}">Sign In With Facebook</a></p>
       </div>
     </div>
 
