--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -11,6 +11,7 @@
     <div *ngIf="showExtras && loginInfo.nickname">
       <p *ngIf="loginInfo.googleLinked">Google Account: <a href="{{loginInfo.googleProfileUrl}}">Connected</a></p>
       <p *ngIf="loginInfo.gitHubLinked">GitHub Account: <a href="{{loginInfo.gitHubProfileUrl}}">Connected</a></p>
+      <p *ngIf="loginInfo.facebookLinked">Facebook Account: <a href="{{loginInfo.facebookProfileUrl}}">Connected</a></p>
 
       <p><a href="{{logoutUrl}}">Log Out</a></p>
     </div>
