Login: Use FontAwesome for Sign In buttons.
Strangely, only Google seems to have any actual branding guidelines
for these buttons, I cannot find any for GitHub and Facebook.
There certainly doesn't seem to be any official advice about how to
have buttons from different services look consistent with each other
while also looking consistent with their own brands.

--- a/src/app/login.component.css
+++ b/src/app/login.component.css
@@ -10,3 +10,38 @@
 .user-status-answers-panel h3:first-child {
     margin-top: 0;
 }
+
+/* Sign In Buttons: */
+
+/* Modify the fa from the fontawesome CSS. */
+.fa {
+    font-size: 120%
+}
+
+.button {
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 120%;
+    display: block;
+}
+
+.button:hover {
+    opacity: 0.7;
+}
+
+.button-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.button-github {
+    background: #2b2b2b;
+    color: white;
+}
+
+.button-facebook {
+    background: #3B5998;
+    color: white;
+}
