--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -9,14 +9,20 @@
     </div>
 
     <div *ngIf="showExtras && loginInfo.nickname">
-      <p *ngIf="loginInfo.googleLinked">Google Account: <a href="{{loginInfo.googleProfileUrl}}">Connected</a></p>
-      <p *ngIf="!loginInfo.googleLinked">Google Account: <a href="{{googleLoginUrl}}">Connect</a></p>
+      <p>Google Account:
+      <a *ngIf="loginInfo.googleLinked" href="{{loginInfo.googleProfileUrl}}">Connected</a>
+      <a *ngIf="!loginInfo.googleLinked" href="{{googleLoginUrl}}">Connect</a>
+      </p>
 
-      <p *ngIf="loginInfo.gitHubLinked">GitHub Account: <a href="{{loginInfo.gitHubProfileUrl}}">Connected</a></p>
-      <p *ngIf="!loginInfo.gitHubLinked">GitHub Account: <a href="{{gitHubLoginUrl}}">Connect</a></p>
+      <p>GitHub Account:
+      <a *ngIf="loginInfo.gitHubLinked" href="{{loginInfo.gitHubProfileUrl}}">Connected</a>
+      <a *ngIf="!loginInfo.gitHubLinked" href="{{gitHubLoginUrl}}">Connect</a>
+      </p>
 
-      <p *ngIf="loginInfo.facebookLinked">Facebook Account: <a href="{{loginInfo.facebookProfileUrl}}">Connected</a></p>
-      <p *ngIf="!loginInfo.facebookLinked">Facebook Account: <a href="{{facebookLoginUrl}}">Connect</a></p>
+      <p>Facebook Account:
+      <a *ngIf="loginInfo.facebookLinked" href="{{loginInfo.facebookProfileUrl}}">Connected</a>
+      <a *ngIf="!loginInfo.facebookLinked" href="{{facebookLoginUrl}}">Connect</a>
+      </p>
 
       <p><a href="{{logoutUrl}}">Log Out</a></p>
     </div>
