--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -5,7 +5,7 @@
   </app-server-status>
 
   <div class="user-status-panel">
-    <app-user-status showExtras="true"></app-user-status>
+    <app-user-status [showExtras]="true"></app-user-status>
 
     <h2>History</h2>
     <div class="user-status-answers-panel">
