Component html: serverState Add square brackets around component attribute/property
To avoid this error when trying to set a child (in HTML) component's attribute
based on the parent's (in HTML) value:

✘ [ERROR] TS2322: Type 'string' is not assignable to type 'ServerState'. [plugin angular-compiler]

    src/app/quizzes.component.html:4:21:
      4 │   <app-server-status state="{{serverState}}">
        ╵                      ~~~~~

--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -1,7 +1,7 @@
 <div class="content-panel">
   <h2 class="page-title-label">Quiz</h2>
 
-  <app-server-status state="{{serverState}}">
+  <app-server-status [state]="serverState">
   </app-server-status>
 
   @if (quiz) {
