--- a/src/app/quizzes.component.html
+++ b/src/app/quizzes.component.html
@@ -1,7 +1,7 @@
 <div class="content-panel">
   <h2>Quizzes</h2>
 
-  <app-server-status state="{{serverState}}">
+  <app-server-status [state]="serverState">
   </app-server-status>
 
   <div class="quiz-list-panel">
