--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -1,7 +1,7 @@
 <div class="content-panel">
   <h2 class="page-title-label">Profile</h2>
 
-  <app-server-status state="{{serverState}}">
+  <app-server-status [state]="serverState">
   </app-server-status>
 
   <div class="user-status-panel">
